refactor : 마커 수동 추가 시 수정 안되는 오류 해결

--- a/pybo/static/css/module.css
+++ b/pybo/static/css/module.css
@@ -55,6 +55,7 @@
     right: 20px;
     padding: 20px;
     box-sizing: border-box;
+    overflow : auto;
 }
 
 /* 챗봇 모듈 스타일 */
@@ -206,3 +207,5 @@ p.chatbot {
     flex-direction: column;
         margin-bottom: 5px;
     }
+
+
