--- a/pybo/templates/navbar.html
+++ b/pybo/templates/navbar.html
@@ -37,7 +37,7 @@
 
                         <li><a href='/friends/find_friends'>친구찾기</a></li>
                         <li><a href="/question/list">Blog</a></li>
-                        <li><a href="/input">Map</a></li>
+                        <li><a href="/input">MyPage</a></li>
                         <li class="nav-item dropdown">
                             <b class="nav-link1" id="notifications-dropdown" href="#" role="button"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -56,7 +56,7 @@
                     <ul>
                         <li><a href='/friends/find_friends'>친구찾기</a></li>
                         <li><a href="/question/list">블로그</a></li>
-                        <li><a href="/input">나만의 지도</a></li>
+                        <li><a href="/input">MyPage</a></li>
                         <li><a href="/login">Login</a></li>
                     </ul>
                     {% endif %}
