--- a/pybo/static/css/index.css
+++ b/pybo/static/css/index.css
@@ -338,17 +338,35 @@ h2.myprofile_1 {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     position: relative;
 }
+.plan {
+    width: 1200px;
+    margin-left: 500px;
 
+}
 .custom-overlay .info-window .image-container {
     width: 100%;
-    height: 270px;
+    height: 220px;
     overflow: hidden;
     position: relative;
+}
+button {
+    height: 40px;
+    background-color: #3288FF;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
 button#detailButton
 {
     float: right;
-    display: flex;
+    width: 80px;
+    height: 40px;
+    background-color: #3288FF;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
 .custom-overlay .info-window img {
     width: 100%;
@@ -375,7 +393,8 @@ button.infoClose:hover {
 
 .custom-overlay .info-window p {
     /*margin-top: 10px;*/
-    font-size: 14px;
+    font-size: 16px;
+    font-weight: 600;
 }
 
 /*.slide-button {*/
