--- a/pybo/static/css/normalize.css
+++ b/pybo/static/css/normalize.css
@@ -154,12 +154,18 @@
   optgroup,
   select,
   textarea {
-    font-family: 'Noto Sans KR', sans-serif; /* 1 */
+      font-family: 'MaplestoryOTFLight';
     font-size: 100%; /* 1 */
     line-height: 1.15; /* 1 */
     margin: 0; /* 2 */
   }
-  
+
+@font-face {
+    font-family: 'MaplestoryOTFLight';
+    src: url(../fonts/NEXONLv1GothicRegular.ttf) format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
   /**
    * Show the overflow in IE.
    * 1. Show the overflow in Edge.
