--- a/pybo/templates/index.html
+++ b/pybo/templates/index.html
@@ -168,17 +168,17 @@
                                 <form id="markerForm">
                                     <div class="form-group">
                                         <label for="title">제목</label>
-                                        <input type="text" class="form-control" id="title" placeholder="제목을 입력해주세요">
+                                        <input type="text" class="form-control" id="title" >
                                     </div>
                                     <div class="form-group">
                                         <label for="content">본문</label>
-                                        <textarea class="form-control" id="content" rows="3" placeholder="내용을 입력해주세요" style="height: 200px;"></textarea>
+                                        <textarea class="form-control" id="content" rows="3"></textarea>
                                     </div>
                                     <div class="form-group">
-                                        <label for="image">이미지 업로드</label>
+                                        <label for="image">이미지 선택</label>
                                         <input type="file" class="form-control-file" id="image" name="img_name">
                                     </div>
-                                    <button type="submit" class="btn btn-primary">작성하기</button>
+                                    <button type="submit" class="btn btn-primary">저장</button>
                                 </form>
                             </div>
                         </div>
@@ -209,16 +209,20 @@
                 {% endif %}
             </div>
         </div>
-    </div><div class="module">
-    <!-- 모듈 -->
-    <!--DALL-E와 관련된 https://platform.openai.com/docs/guides/images/introduction-->
-    <div class="module-icon module-menu">
+    </div>
+    <div class="module">
+        <!-- 모듈 -->
+        <!--DALL-E와 관련된 https://platform.openai.com/docs/guides/images/introduction-->
+        <div class="module-icon module-menu">
         <i class="fas fa-th-large fa-fw"></i>
     </div>
     <div class="module-icons" style="display: none;">
         <!-- 모듈 챗봇 아이콘 -->
         <div class="module-icon chatbot-icon">
             <i class="fas fa-comment-alt fa-fw"></i>
+        </div>
+        <div class="module-icon history-icon">
+            <i class="fas fa-history fa-fw"></i>
         </div>
         <!-- 모듈 이미지 마스크 제너레이터 아이콘 -->
         <div class="module-icon image-generator-icon">
@@ -237,6 +241,17 @@
         </div>
         <input type="text" class="form-control chatbot-input" placeholder="여기에 텍스트를 입력하세요...">
         <button class="btn btn-primary chatbot-submit">제출</button>
+        <div id="loading-spinner" class="spinner-border text-primary" role="status" style="display:none;">
+        </div>
+    </div>
+    <div class="module-content chatbot-history-content">
+        <h3>챗봇 히스토리</h3>
+        <div class="chatbot-history">
+            <!-- 이 div에 히스토리가 추가됩니다. -->
+        </div>
+        <button class="btn btn-primary chatbot-history-refresh">새로고침</button>
+        <div id="loading-spinner1" class="spinner-border text-primary" role="status" style="display:none;">
+        </div>
     </div>
 
     <!-- DALL-E content -->
@@ -249,23 +264,30 @@
         <textarea class="form-control prompt-input" id="prompt" rows="3" placeholder="여기에 프롬프트를 입력하세요"></textarea>
         <button class="btn btn-primary masking-button">마스킹</button>
         <button class="btn btn-primary dalle-submit" style="display:none;">제출</button>
+        <div id="loading-spinner2" class="spinner-border text-primary" role="status" style="display:none;">
+        </div>
     </div>
 
     <div class="module-content c-content" style="display:none;">
         <h3>이미지 생성기</h3>
         <input type="text" class="form-control c-dalle-input" placeholder="영어로 텍스트를 입력해주세요">
         <button class="btn btn-primary c-dalle-submit">제출</button>
-        <img id="displayedImage" style="display:none; width: 512px; height: 512px;"> <!-- 이미지 크기 수정 -->
+        <img id="displayedImage" style="display:none; width: 512px; height: 512px;">
+        <div id="loading-spinner3" class="spinner-border text-primary" role="status" style="display:none;">
+        </div> <!-- 이미지 크기 수정 -->
         <a class="btn btn-primary" id="downloadBtn" style="display:none;">다운로드</a> <!-- 다운로드 버튼을 <a> 태그로 수정 -->
         <button class="btn btn-primary" id="backBtn" style="display:none;">돌아가기</button> <!-- 돌아가기 버튼 추가 -->
     </div>
-
-    <!-- 챗봇 JavaScript 코드 -->
-    <script src="{{ url_for('static', filename='js/module.js') }}" defer></script>
-</div>
+    
+        <!-- 챗봇 JavaScript 코드 -->
+        <script src="{{ url_for('static', filename='js/module.js') }}" defer></script>
+    </div>
     <!--second section end-->
 </div>
 </ul>
+<!-- <div class="thirdsection">
+
+</div> -->
 </div>
 </div>
 </header>
@@ -273,6 +295,42 @@
 </div>
 
 <script>
+    let myIDval2;
+    async function fetchMyID2() {
+        const response = await fetch('/route/get_my_id');
+        const myID = await response.json();
+        return myID;
+    }
+    (async () => {
+        let myIDval2 = await fetchMyID2();
+
+        $.ajax({
+            url: '/openai/get_plans',
+            type: 'GET',
+            success: function(response) {
+                console.log(myIDval2)
+                let dynamicthirdsections = '';
+                for(let i=0; i<response.length; i++) {
+                    // myIDval 값과 user_id 값이 같은 경우에만 HTML 생성
+                    if(response[i].user_id === myIDval2) {
+                        dynamicthirdsections += `
+                        <div class="plan">
+                            <p class="plan_input">입력: ${response[i].prompt}</p>
+                            <p class="plan_output">결과: ${response[i].travel_plan}</p>
+                        </div>
+                    `;
+                    }
+                }
+                $('.thirdsection').html(dynamicthirdsections);
+            },
+            error: function(error) {
+                console.log(error);
+            }
+        });
+    })();
+
+
+
     async function fetchFollowNotifications() {
         const response = await fetch('/friends/get_follow_notifications');
         const notifications = await response.json();
