--- a/pybo/templates/main.html
+++ b/pybo/templates/main.html
@@ -39,7 +39,7 @@
             {% if g.user %}
                 <ul>
                     <li class="nav_li"><a href="/question/list">Blog</a></li>
-                    <li class="nav_li"><a href="/input">Map</a></li>
+                    <li class="nav_li"><a href="/input">MyPage</a></li>
                     <li class="nav-item ">
                         <a class="nav-link" href="{{ url_for('main.logout') }}">{{ g.user.user_name }} 님 (로그아웃)</a>
                     </li>
@@ -47,7 +47,7 @@
             {% else %}
                 <ul>
                     <li class="nav_li"><a href="/question/list">Blog</a></li>
-                    <li class="nav_li"><a href="/input">Map</a></li>
+                    <li class="nav_li"><a href="/input">MyPage</a></li>
                     <li class="nav_li"><a href="/login">Login</a></li>
 
                 </ul>
